# engine

./: .gitignore  CMakeLists.txt  README.md
src/: Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  main.cpp
src/Components/: TransformComponent.cpp  TransformComponent.h
